<resources>
    <string name="app_name">ShareX</string>
    <string name="username">Full name</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="signup">SIGN UP</string>
    <string name="selectusertype">Select your user type</string>
    <string name="university">University</string>
    <string name="educationcenter">Education \nCenter</string>
    <string name="tourist">Tourist</string>
    <string name="login">Log in</string>
    <string name="next">Next</string>
    <string name="signinwith">Sign in with</string>
    <string name="title">Title</string>
    <string name="countryofres">Country of residence</string>
    <string name="city">City</string>
    <string name="nativelan">Native language</string>
    <string name="nationality">Nationality</string>
    <string name="fillinfo">Fill your information</string>
    <string name="uploadphoto">Upload your image</string>
    <string name="createaccount">Create an account</string>

    <string name="some_error">Some Error Occurred!</string>

    <string name="facebook_app_id">984481718596657</string>
    <string name="fb_login_protocol_scheme">fb984481718596657</string>
    <string name="sign_up_with">sign up with</string>


</resources>
