<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlfragsignuptourist1"
        android:background="@drawable/sharex"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_left_arrow_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp20"
                    android:fontFamily="@font/fibra_one_regular"
                    android:text="@string/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dp40"
        android:id="@+id/llfragsignuptourist2Input"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/rlfragsignuptourist1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <EditText
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:drawableEnd="@drawable/ic_badge_1"
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:drawableEnd="@drawable/ic_home"
            android:hint="@string/countryofres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginBottom="@dimen/dp20"
            android:fontFamily="@font/fibra_one_regular"
            android:hint="@string/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:layout_marginBottom="@dimen/dp20"
            android:fontFamily="@font/fibra_one_regular"
            android:drawableEnd="@drawable/ic_language"
            android:hint="@string/nativelan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:fontFamily="@font/fibra_one_regular"
            android:drawableEnd="@drawable/ic_japan"
            android:hint="@string/nationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>


    <Button
        android:id="@+id/btnsignuptourist2"
        android:layout_marginBottom="@dimen/buttonBottomMargin"
        android:text="@string/next"
        android:textSize="@dimen/sp20"
        android:fontFamily="@font/fibra_one_regular"
        android:background="@drawable/bg_rect_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp50"/>
</androidx.constraintlayout.widget.ConstraintLayout>