<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sign_image"

    >

    <View
        android:id="@+id/view"
        android:background="@color/whitepure"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        />

    <TextView
        android:fontFamily="@font/fibra_one_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp24"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_rect_white"
        android:text="@string/signup"
        android:id="@+id/tvSignUp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:textSize="@dimen/sp14"
            android:padding="@dimen/dp10"
            android:background="@drawable/bg_rect_text"
            android:textColor="@color/whitelike"
            android:textColorHint="@color/whitelike"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:textSize="@dimen/sp14"
            android:padding="@dimen/dp10"
            android:background="@drawable/bg_rect_text"
            android:textColor="@color/whitelike"
            android:textColorHint="@color/whitelike"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:textSize="@dimen/sp14"
            android:padding="@dimen/dp10"
            android:background="@drawable/bg_rect_text"
            android:textColorHint="@color/whitelike"
            android:hint="@string/phone"
            android:textColor="@color/whitelike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:textSize="@dimen/sp14"
            android:padding="@dimen/dp10"
            android:background="@drawable/bg_rect_text"
            android:textColorHint="@color/whitelike"
            android:hint="@string/password"
            android:textColor="@color/whitelike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>