<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlfragsignupeducenter1"
        android:background="@drawable/sharex"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_left_arrow_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp20"
                    android:fontFamily="@font/fibra_one_regular"
                    android:text="@string/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dp40"
        android:id="@+id/llfragsignupeducenter1Input"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/rlfragsignupeducenter1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <EditText
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:drawableEnd="@drawable/ic_identification"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:drawableEnd="@drawable/ic_mail"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:fontFamily="@font/fibra_one_regular"
            android:drawableEnd="@drawable/ic_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/llfragsignupeducenter1Input"
        app:layout_constraintBottom_toTopOf="@+id/btnsignupeducenter1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <View
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@color/greyish1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

        <TextView
            android:fontFamily="@font/fibra_one_bold"
            android:textAllCaps="true"
            android:textColor="@color/greyish"
            android:text="@string/sign_up_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@color/greyish1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnsignupeducenter1"
        android:layout_marginBottom="@dimen/buttonBottomMargin"
        android:text="@string/next"
        android:textSize="@dimen/sp20"
        android:fontFamily="@font/fibra_one_regular"
        android:background="@drawable/bg_rect_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp50"/>
</androidx.constraintlayout.widget.ConstraintLayout>