<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitepure"
    >

    <RelativeLayout
        android:id="@+id/rlfragsignupeducenter2"
        android:background="@drawable/sharex"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_left_arrow_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:textColor="@color/whitepure"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp20"
                    android:fontFamily="@font/fibra_one_regular"
                    android:text="@string/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dp20"
        android:id="@+id/llfragsignupeducenter2Input"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/rlfragsignupeducenter2"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <EditText
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:drawableEnd="@drawable/ic_phone"
            android:hint="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:lines="8"
            android:maxLines="10"
            android:gravity="top"
            android:padding="@dimen/dp10"
            android:background="@drawable/bg_rect_text2"
            android:fontFamily="@font/fibra_one_regular"
            android:hint="@string/fillinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>


    <Button
        android:id="@+id/btnsignupeducenter2"
        android:layout_marginBottom="@dimen/dp20"
        android:text="@string/next"
        android:textSize="@dimen/sp20"
        android:fontFamily="@font/fibra_one_regular"
        android:background="@drawable/bg_rect_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp50"/>
</androidx.constraintlayout.widget.ConstraintLayout>