<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/top_bg"
        android:background="@drawable/sharex"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_left_arrow_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp20"
                    android:fontFamily="@font/fibra_one_regular"
                    android:text="@string/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_input"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/top_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_login_phone"
            android:fontFamily="@font/fibra_one_regular"
            android:layout_marginBottom="@dimen/dp20"
            android:drawableEnd="@drawable/ic_phone"
            android:hint="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/input_login_pass"
            android:fontFamily="@font/fibra_one_regular"
            android:drawableEnd="@drawable/ic_password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/action_forget_pass"
            android:textColor="@color/greyish"
            android:text="@string/forgotpassword"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line"
        android:layout_marginTop="@dimen/dp50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/container_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <View
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@color/greyish1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

        <TextView
            android:fontFamily="@font/fibra_one_bold"
            android:textAllCaps="true"
            android:textColor="@color/greyish"
            android:text="@string/signinwith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_margin="@dimen/dp5"
            android:layout_weight="1"
            android:background="@color/greyish1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/line">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/action_google_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonSize="wide"/>

    </LinearLayout>

    <Button
        android:id="@+id/action_login"
        android:layout_marginBottom="@dimen/buttonBottomMargin"
        android:text="@string/login"
        android:textSize="@dimen/sp20"
        android:fontFamily="@font/fibra_one_regular"
        android:background="@drawable/bg_rect_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp50"/>
</androidx.constraintlayout.widget.ConstraintLayout>