<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/rlfragsignup3"
        android:background="@drawable/sharex"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_left_arrow_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="@dimen/sp20"
                    android:fontFamily="@font/fibra_one_regular"
                    android:text="@string/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_input"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.3"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@+id/rlfragsignup3"
        app:layout_constraintBottom_toTopOf="@+id/btnsignup3"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <ImageView

            android:layout_marginBottom="@dimen/dp10"
            android:src="@drawable/ic_ellipse"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            />

        <TextView

            android:fontFamily="@font/fibra_one_regular"
            android:textSize="@dimen/sp20"
            android:textColor="@color/black"
            android:text="@string/uploadphoto"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnsignup3"
        android:layout_marginBottom="@dimen/buttonBottomMargin"
        android:text="@string/createaccount"
        android:textSize="@dimen/sp20"
        android:fontFamily="@font/fibra_one_regular"
        android:background="@drawable/bg_rect_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp50"/>
</androidx.constraintlayout.widget.ConstraintLayout>